Fix layout bugs in index.html

--- a/op_dropdown_menu/style.css
+++ b/op_dropdown_menu/style.css
@@ -43,8 +43,8 @@ h2 {
 }
 
 .threedots_toggler > * {
-  height: 15%;
-  width: 15%;
+  height: 20%;
+  width: 20%;
   background-color: black;
 }
 
@@ -56,10 +56,10 @@ h2 {
 }
 
 .threedots_toggler {
-  /* margin-right: 7rem;
-  margin-bottom: 3rem; */
-  height: 2vw;
-  width: 2vw;
+  margin-right: 47%;
+  /* margin-bottom: 3rem; */
+  height: 3vw;
+  width: 3vw;
   /* border: 0.2rem solid black; */
   display: flex;
   flex-direction: column;
@@ -124,30 +124,45 @@ h2 {
 }
 
 .threedots_menu {
-  box-shadow: -0.4rem 0 0 0 black, 0.4rem 0 0 0 black, 0 -0.4rem 0 0 black,
-    0 0.4rem 0 0 black;
-  width: 16.7vw;
-  height: 13vw;
+  width: 25vw;
+  /* min-width: 189px; */
+  height: 19vw;
+  /* min-height: 147px; */
   box-sizing: border-box;
-  /* padding: 1rem 0 1rem 0.5rem; */
+  padding: 8vh 0 8vh 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   position: relative;
-  margin: 5vh 0 0 2.2vw;
-  font-size: 70%;
+  margin: 1vh 0 0 1vw;
+  font-size: 3vh;
+  background: no-repeat center/120%
+    url("./—Pngtree—light\ pixel\ art\ text\ box_6254519.png");
+  /* border: 1px dashed black; */
+  transform: rotate(180deg);
+}
+
+.threedots_menu > * {
+  position: relative;
+  transform: rotate(180deg);
+  margin-right: 3vw;
+}
+
+.threedots_menu > *:hover {
+  color: pink;
+  cursor: pointer;
 }
 
 .hidden_threedots {
   display: none;
 }
 
-.threedots_arrow {
+/* .threedots_arrow {
   height: 50px;
   width: 56px;
-  position: absolute;
-  bottom: 100%;
-  left: 3.75vw;
+  position: relative;
+  bottom: 37%;
+  align-self: center;
   background-image: url("./reshot-icon-arrow-chevron-up-9ECRMJ2GNT.svg");
   background-size: 5rem;
   background-repeat: no-repeat;
@@ -155,7 +170,7 @@ h2 {
   border: 0.4rem solid transparent;
   border-bottom-color: pink;
   border-bottom-width: 0.5rem;
-}
+} */
 
 #title {
   text-align: center;
